--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@fanclubz/shared": "file:../shared",
     "@supabase/supabase-js": "^2.53.0",
     "axios": "^1.11.0",
+    "bad-words": "^4.0.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.0",
     "compression": "^1.7.4",
@@ -43,7 +44,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^7.0.13",
     "pg": "^8.12.0",
     "redis": "^4.6.11",
     "sharp": "^0.33.1",
